fix gradient for cards so shadows aren't overlapping

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -52,6 +52,7 @@
 .card--standard .card__inner:after {
   content: '';
   position: absolute;
+  z-index: -1;
   width: calc(var(--border-width) * 2 + 100%);
   height: calc(var(--border-width) * 2 + 100%);
   top: calc(var(--border-width) * -1);
@@ -59,6 +60,10 @@
   border-radius: var(--border-radius);
   box-shadow: var(--shadow-horizontal-offset) var(--shadow-vertical-offset) var(--shadow-blur-radius)
     rgba(var(--color-shadow), var(--shadow-opacity));
+}
+
+.card--card.gradient {
+  background-attachment: local;
 }
 
 .card .card__inner .card__media {
